feat: footer component and mixin setting 1. add - layout of footer component 2. add - mixin settings of required breakpoints

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -4,6 +4,9 @@
 @import './base/fontStyle';
 @import './base/base';
 
+// mixin
+@import './utils/mixin';
+
 // layout
 @import './layout/header.scss';
 @import './layout/footer.scss';
