--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,4 +1,194 @@
-.footer{
-  background: #69F0AE;
-  font-size: 64px;
+.footer {
+  background-color: var(--color-primary);
+  padding: 24px 0;
+
+  .company_info_section {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #fff;
+
+    .company_info {
+      order: 1;
+
+      & > div {
+        p {
+          display: flex;
+          align-items: center;
+        } 
+
+        a {
+          font-size: 16px;
+          color: var(--color-white);
+        }
+      }
+
+      span {
+        font-size: 16px;
+        color: var(--color-white);
+        margin-right: 11px;
+      }
+    }
+
+    .interactions {
+      order: 2;
+      ul {
+        display: none;
+      }
+
+      a + a{
+        margin-left: 8px;
+      }
+
+      img {
+        width: 24px;
+        height: 24px;
+      }
+    }
+  }
+
+  .protocol_section {
+    padding-top: 16px;
+    color: var(--color-white);
+
+    & > p {
+      margin-bottom: 8px;
+    }
+
+    p + p {
+      margin-top: 8px;
+    }
+  }
+}
+
+// @media(min-width: 768px) {
+//   .footer {
+
+//     .company_info_section {
+//       display: block;
+
+//       .company_info {
+
+//         & > div {         
+
+//           a {
+//             font-size: 36px;
+//           }
+//         }
+
+//         span {
+//           font-size: 36px;
+//         }
+//       }
+
+//       .interactions {
+//         display: flex;
+//         align-items: center;
+
+//         ul {
+//           display: flex;
+//           margin: 0 -24px;
+
+  
+//           a {
+//             display: block;
+//             padding: 0 24px;
+//             color: var(--color-white);
+//           }
+//         }
+
+//         .icons {
+//           margin-left: auto;
+
+//           a {
+
+//             img {
+//               width: 48px;
+//               height: 48px;
+//             }
+//           }
+//         }
+//       }
+//     }
+
+//     .protocol_section {
+//       display: flex;
+//       justify-content: space-between;
+
+//       & > div {
+//         display: flex;
+
+//         p + p {
+//           margin-top: 0;
+//           margin-left: 40px;
+//         }
+//       }
+//     }
+//   }
+// }
+
+@include tablet {
+  .footer {
+
+    .company_info_section {
+      display: block;
+
+      .company_info {
+
+        & > div {         
+
+          a {
+            font-size: 36px;
+          }
+        }
+
+        span {
+          font-size: 36px;
+        }
+      }
+
+      .interactions {
+        display: flex;
+        align-items: center;
+
+        ul {
+          display: flex;
+          margin: 0 -24px;
+
+  
+          a {
+            display: block;
+            padding: 0 24px;
+            color: var(--color-white);
+          }
+        }
+
+        .icons {
+          margin-left: auto;
+
+          a {
+
+            img {
+              width: 48px;
+              height: 48px;
+            }
+          }
+        }
+      }
+    }
+
+    .protocol_section {
+      display: flex;
+      justify-content: space-between;
+
+      & > div {
+        display: flex;
+
+        p + p {
+          margin-top: 0;
+          margin-left: 40px;
+        }
+      }
+    }
+  }
 }
