--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,61 @@
-<footer class="footer">我是 footer</footer>
+<footer class="footer">
+  <div class="container">
+    <div class="company_info_section">
+    <div class="interactions">
+        <ul>
+          <li><a href="">首頁</a></li>
+          <li><a href="">系列鏡框</a></li>
+          <li><a href="">門市據點</a></li>
+          <li><a href="">門市據點</a></li>
+          <li><a href="">常見問題</a></li>
+        </ul>
+        <div class="icons">
+          <a href="">
+            <img 
+              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true" 
+              alt="" 
+            />
+          </a>
+          <a href="">
+            <img 
+              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true" 
+              alt="" 
+            />
+          </a>
+          <a href="">
+            <img 
+              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true" 
+              alt="" 
+            />
+          </a>
+        </div>
+        
+      </div>
+      <div class="company_info">
+        <div>
+          <p>
+            <span class="material-symbols-outlined">
+              call
+            </span>
+            <a href="tel:0800-000-00">0800-000-00</a>
+            
+          </p>
+          <p>
+            <span class="material-symbols-outlined">
+              mail
+            </span>
+            <a href="mailto:glasses@business.com">glasses@business.com</a>
+          </p>
+        </div>
+      </div>
+      
+    </div> 
+    <div class="protocol_section">
+      <p>Copyright © 2020 Glasses.All rights reserved.</p>
+      <div>
+        <p>隱私權政策</p>
+        <p>服務條款</p>
+      </div>
+    </div>
+  </div>
+</footer>
