feat: locations_list page 1. add - layout of mobile resolution

--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -3,6 +3,7 @@
   --font-family-roboto: Roboto;
   --line-height: 1.5;
   --color-black: #000000;
+  --color-black-accent: #212529;
   --color-white: #FFFFFF;
   --color-accent: #FBF2F2;
   --color-primary: #AA0601;
