--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -8,7 +8,7 @@
     <div class="header_content_wrapper">
       <a
         class="logo-img"
-        href="/index">
+        href="/HexSchool_layout_Week4/pages/index.html">
         <img  
           width='80'
           src="/assets/images/header_logo.png"
@@ -19,7 +19,7 @@
           <a href="/seriesGlasses">系列鏡框</a>
         </li>
         <li>
-          <a href="">
+          <a href="/HexSchool_layout_Week4/pages/locations.html">
           門市據點
           </a>
         </li>
