fix: the layout of locationsInDetail page 1. modify - modify the position of icon of .material-symbols-outlined to meet the requirement 2. add - the navigate btn of cards in locations Page can all be navigated to locationInDetail page

--- a/assets/scss/pages/_locations.scss
+++ b/assets/scss/pages/_locations.scss
@@ -50,11 +50,16 @@
       & > div {
         color: var(--color-black-accent);
         display: flex;
+        position: relative;
+        padding-left: 35px;
         
         .material-symbols-outlined {
           display: flex;
           align-items: center;
           margin-right: 11px;
+          position: absolute;
+          left: 0;
+          top: 3px;
         }
       }
 
