--- a/assets/scss/pages/_locations.scss
+++ b/assets/scss/pages/_locations.scss
@@ -85,11 +85,17 @@
     .locations_list {
       display: flex;
       flex-wrap: wrap;
-      // margin: 0 -12px;
 
       .card {
         width: 50%;
-        // padding: 24px 12px;
+      }
+    }
+
+    .search_form {
+      
+      select {
+        width: 304px;
+        flex-grow: 0;
       }
     }
   } 
